edition = "2023";

import "google/protobuf/empty.proto";
import "types/invoice.proto";

package protocol.api_service.storage;

option go_package = "go-invoice-service/common/protocol/proto/apiservice";

message UploadRequest {
  types.Invoice invoice = 1;
}

service InvoiceStorage {
  rpc Upload (UploadRequest) returns (google.protobuf.Empty);
}